fixed the inconsistency in font family, the spacing of the elements and also the weight of the info section, the spacing between the login tittle

--- a/css-day-1/css-day-1.css
+++ b/css-day-1/css-day-1.css
@@ -27,6 +27,7 @@ body {
   font-size: 2rem;
   font-family: merriweather;
   font-weight: 900;
+  margin-bottom: 2rem;
 }
 .form__input {
   display: block;
@@ -36,6 +37,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: poppins;
   cursor: pointer;
 }
 
@@ -53,6 +55,7 @@ body {
   outline: none;
   border: 1px solid #dadaf2;
   width: 100%;
+  min-height: 3.75rem;
 }
 .btn:hover,
 .form__input:focus {
@@ -74,6 +77,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-weight: 700;
 }
 .info span {
   display: inline-block;
